ios fix for loadout spacing

--- a/src/app/inventory/StoreBucket.scss
+++ b/src/app/inventory/StoreBucket.scss
@@ -6,6 +6,7 @@
 }
 
 .sub-bucket {
+  width: 100%;
   min-height: var(--item-size);
   display: grid;
   grid-template-columns: repeat(auto-fill, var(--item-size));
