--- a/src/app/loadout/loadout-drawer.scss
+++ b/src/app/loadout/loadout-drawer.scss
@@ -216,12 +216,6 @@
     white-space: nowrap;
   }
 
-  .sub-bucket {
-    flex: 1;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-  }
   .sub-bucket.equipped {
     flex: 0;
     .loadout-item {
